// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusIndicator render animated 1`] = `
<DocumentFragment>
  @keyframes animation-0 {
  0% {
    opacity: 1;
  }

  50% {
    opacity: 0.1;
  }

  100% {
    opacity: 1;
  }
}

.cache-x426dy-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #45d6b5;
  -webkit-animation: animation-0 linear 1s infinite;
  animation: animation-0 linear 1s infinite;
}

<div
    class="e6t57f80 cache-x426dy-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render available 1`] = `
<DocumentFragment>
  .cache-c1ktzk-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #45d6b5;
}

<div
    class="e6t57f80 cache-c1ktzk-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render creating 1`] = `
<DocumentFragment>
  .cache-q5x4l5-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e6t57f80 cache-q5x4l5-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render deleting 1`] = `
<DocumentFragment>
  .cache-q5x4l5-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e6t57f80 cache-q5x4l5-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render deployed 1`] = `
<DocumentFragment>
  .cache-c1ktzk-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #45d6b5;
}

<div
    class="e6t57f80 cache-c1ktzk-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render disk_full 1`] = `
<DocumentFragment>
  .cache-3na4b1-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #ef5774;
}

<div
    class="e6t57f80 cache-3na4b1-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render error 1`] = `
<DocumentFragment>
  .cache-3na4b1-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #ef5774;
}

<div
    class="e6t57f80 cache-3na4b1-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render locked 1`] = `
<DocumentFragment>
  .cache-3na4b1-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #ef5774;
}

<div
    class="e6t57f80 cache-3na4b1-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render pending 1`] = `
<DocumentFragment>
  .cache-q5x4l5-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e6t57f80 cache-q5x4l5-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render ready 1`] = `
<DocumentFragment>
  .cache-c1ktzk-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #45d6b5;
}

<div
    class="e6t57f80 cache-c1ktzk-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render running 1`] = `
<DocumentFragment>
  .cache-c1ktzk-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #45d6b5;
}

<div
    class="e6t57f80 cache-c1ktzk-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render snapshotting 1`] = `
<DocumentFragment>
  .cache-q5x4l5-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e6t57f80 cache-q5x4l5-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render starting 1`] = `
<DocumentFragment>
  .cache-q5x4l5-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e6t57f80 cache-q5x4l5-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render stopped 1`] = `
<DocumentFragment>
  .cache-1aoiwak-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #b2b6c3;
}

<div
    class="e6t57f80 cache-1aoiwak-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render stopped_in_place 1`] = `
<DocumentFragment>
  .cache-183lxe4-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #ff8c69;
}

<div
    class="e6t57f80 cache-183lxe4-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render stopping 1`] = `
<DocumentFragment>
  .cache-q5x4l5-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e6t57f80 cache-q5x4l5-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render unavailable 1`] = `
<DocumentFragment>
  .cache-3na4b1-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #ef5774;
}

<div
    class="e6t57f80 cache-3na4b1-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render unknow 1`] = `
<DocumentFragment>
  .cache-q5x4l5-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e6t57f80 cache-q5x4l5-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render updating 1`] = `
<DocumentFragment>
  .cache-q5x4l5-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e6t57f80 cache-q5x4l5-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;

exports[`StatusIndicator render warning 1`] = `
<DocumentFragment>
  .cache-q5x4l5-StatusIndicator {
  display: inline-block;
  border-radius: 50%;
  width: 10px;
  height: 10px;
  background-color: #3f6ed8;
}

<div
    class="e6t57f80 cache-q5x4l5-StatusIndicator e7ah3bn0"
  />
</DocumentFragment>
`;
